Working: Sending/receiving encrypted messages + updating key, tag & id